--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "material-design-icons-iconfont": "^6.7.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuetify": "^2.6.0"
+    "vuetify": "^2.6.0",
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
